Run virtual thread with event-loom to ensure the context will get a single execution at a time